---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
    - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
    - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
    - Fixed deconstruction planner handling to avoid creating uncancelable deconstruction orders for the unapproved ghost force.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-07-30
  Bugfixes:
    - Fixed crash when undoing ghost placement if player is not holding anything in hand.
    - Fixed deconstruction of landscape (trees, rocks, cliffs) when using cut-and-paste.
    - Fixed uncancelable deconstruction requests when using cut-and-paste tool or deconstruction planner.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2022-07-30
  Bugfixes:
    - Fixed crash when requesting deconstruction at beginning of the game (when unapproved ghost force has not been created yet).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-07-19
  Features:
    - Removal of unapproved ghosts using deconstruction planner can now be undone using standard game controls (Control + Z).
    - Removal of unapproved ghosts using cut-and-paste tool can now be undone using standard game controls (Control + Z).
  Bugfixes:
    - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.