@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
   Features:
+    - Addition of /cp_cleanup console command that can be used to clean-up some inconsistencies in the savegame related to construction planner. Make sure to backup the savegame before using.
   Bugfixes:
     - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
     - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
